fix: adjust column gap in App-top-bar for improved layout in Excalidraw bottom toolbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -118,6 +118,10 @@
   overflow-y: auto;
 }
 
+.philani-excalidraw-bottom-toolbar .excalidraw .App-top-bar .Stack_horizontal {
+  column-gap: 0 !important;
+}
+
 .philani-excalidraw-bottom-toolbar .excalidraw .App-top-bar,
 .philani-excalidraw-bottom-toolbar .excalidraw .App-bottom-bar,
 .philani-excalidraw-bottom-toolbar .excalidraw .App-top-bar .Island,
